# AI-FC

./: README.md
truth-detector/: .gitignore  DESIGN.md  README.md  design-diagram.md  pyproject.toml
truth-detector/app/: __init__.py  cli.py
truth-detector/app/common/: http.py
truth-detector/app/config/: loader.py  sources.yaml
truth-detector/app/ingest/: __init__.py  chunk.py  clean.py  dedupe.py  embed.py  extract_article.py  fetch_rss.py  index.py
truth-detector/app/store/: __init__.py  chroma.py  sqlite.py
truth-detector/app/ui/: __init__.py  components.py  main.py
truth-detector/app/verify/: __init__.py  analyze.py  enhance.py  output.py  parse.py  retrieve.py  search.py
